[flake8]
ignore = E501, E203, W503, W504
exclude = ./docs/conf.py,./src/urllib3/packages/*
max-line-length = 99

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
provides-extra = 
	secure
	socks
	brotli
requires-dist = 
	pyOpenSSL>=0.14; extra == 'secure'
	cryptography>=1.3.4; extra == 'secure'
	idna>=2.0.0; extra == 'secure'
	certifi; extra == 'secure'
	ipaddress; python_version=="2.7" and extra == 'secure'
	PySocks>=1.5.6,<2.0,!=1.5.7; extra == 'socks'
	brotlipy>=0.6.0; extra == 'brotli'
version = 1.25.10+lineaje.1
maintainer = Lineaje DepFixer
maintainer_email = 221268890+Lineaje-DepFixer@users.noreply.github.com
url = https://github.com/lineaje-labs-gos/urllib3-urllib3
project_urls = Homepage = https://github.com/lineaje-labs-gos/urllib3-urllib3
	Repository = https://github.com/lineaje-labs-gos/urllib3-urllib3
	Tracker = https://github.com/lineaje-labs-gos/urllib3-urllib3/issues

[tool:pytest]
xfail_strict = true
python_classes = Test *TestCase

